--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <div class="login">
       <div class="logo">
         <img src="logo.png" alt="Logo Themelia" />
-        <p class="logo content">beta</p>
+        <!-- <p class="logo content">beta</p> -->
       </div>
-      <div class="usernamer">
-        <p>Username:</p>
-        <input type="text" />
+      <div class="username">
+        <p class="username-text">Username:</p>
+        <input class="username-input" type="text" />
       </div>
       <div class="password">
-        <p>Password:</p>
+        <p class="password-text">Password:</p>
         <input type="text" />
       </div>
       <button>Login</button>
